// Copyright 2022 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message CustomDeploymentNGInstanceSyncPerpetualTaskParams {
  string account_id = 1;
  string script = 2;
  string output_path_key = 3;
  string instances_list_path = 4;
  map<string, string> instance_attributes = 5;
  string infrastructure_key = 6;
}
